# MobileLoadX

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GET_STARTED.md  IMPROVEMENTS.md  LICENSE  MARKET_GAPS.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  complete_sdk_setup.ps1  create_avd.ps1  download_and_setup_sdk.ps1  example_config.yaml  final_sdk_setup.ps1  install_android_sdk.ps1  install_java.ps1  install_java_zip.ps1  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: lint.yml  pypi-publish.yml  tests.yml
docs/: ARCHITECTURE.md  COMO_TESTAR_MELHORIAS.md  COMPARISON.md  INSTALLATION.md  INSTALL_ANDROID_SDK.md  LINKEDIN_POSTS.md  MELHORIAS_REALIZADAS.md  PLUGINS.md  PROJECT_MOTIVATION.md  QUICKSTART.md  QUICK_INSTALL_SDK.md  TESTING_REAL_APK.md
examples/: README.md  basic_test.py  ecommerce_test.yaml  find_elements.py  multi_device_test.py  real_apk_config.yaml  test_real_apk.py
mobileloadx/: __init__.py  cli.py  logging_setup.py  schema_validator.py
mobileloadx/config/: __init__.py  loader.py
mobileloadx/core/: __init__.py  action.py  load_test.py  scenario.py  virtual_user.py
mobileloadx/metrics/: __init__.py  collector.py
mobileloadx/plugins/: __init__.py  base.py  example.py
mobileloadx/reporting/: __init__.py  report_generator.py  results.py
tests/: __init__.py  conftest.py  test_cli.py  test_config_loader.py  test_load_test.py  test_metrics.py  test_scenario.py  test_virtual_user.py
